[metadata]
description-file = README.md
name = pym
version=0.3.18
url = "https://github.com/jalanb/pym"
license = "MIT License"
author = "J Alan Brogan"
author_email = "pym@al-got-rhythm.net"
description=pym.__doc__
platforms = "any"
classifiers = 
    Programming Language :: Python :: 3.7
    Development Status :: 4 - Beta
    Natural Language :: English
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Text Editors :: Text Processing
    Topic :: Software Development :: Code Generators

[flake8]
exclude = .git,.tox,.venv,__pycache__,*.egg-info,build,dist,old
max-line-length = 88
# E203, W503: suggested by black
# E731: lambda bad
extend-ignore = E203, W503, E731
max-returns = 8
max-arguments = 8

[isort]
force_single_line = True

